# plank-monorepo

./: .gitmodules  README.md
plankc/: CLAUDE.md  Cargo.toml  justfile
plankc/.opencode/agents/: code-qa.md
plankc/crates/plank-core/src/: chunked_arena.rs  dense_index_map.rs  index.rs  span.rs
plankc/crates/plank-core/src/index_vec/: mod.rs
plankc/crates/plank-evm/src/: lib.rs  tests.rs  version.rs
plankc/crates/plank-test-utils/src/: lib.rs
plankc/docs/: Grammar.md
plankc/frontend/cli/: Cargo.toml
plankc/frontend/cli/src/: main.rs
plankc/frontend/driver/: Cargo.toml
plankc/frontend/driver/src/: lib.rs
plankc/frontend/hir-eval/: Cargo.toml
plankc/frontend/hir-eval/src/: builtins.rs  diagnostics.rs  evaluator.rs  lib.rs  operators.rs  quota.rs  scope.rs  structs.rs  tuples.rs
plankc/frontend/hir-eval/src/functions/: cache.rs  mod.rs
plankc/frontend/hir-eval/src/tests/: basic.rs  calls.rs  compile_log.rs  comptime.rs  mod.rs  operators.rs  structs.rs  tuples.rs  types.rs
plankc/frontend/hir/src/: display.rs  lib.rs  tests.rs
plankc/frontend/hir/src/lowerer/: diagnostics.rs  mod.rs
plankc/frontend/mir-lower-sona/: Cargo.toml
plankc/frontend/mir-lower-sona/src/: function.rs  lib.rs  module.rs  tests.rs
plankc/frontend/mir-lower/src/: builtins.rs  lib.rs  tests.rs
plankc/frontend/mir/src/: display.rs  lib.rs
plankc/frontend/parser/: Cargo.toml
plankc/frontend/parser/src/: lexer.rs
plankc/frontend/parser/src/ast/: expr.rs
plankc/frontend/parser/src/cst/: mod.rs
plankc/frontend/parser/src/parser/: errors.rs  mod.rs  strings.rs
plankc/frontend/parser/src/tests/: errorless.rs  mod.rs  resiliency.rs
plankc/frontend/session/src/: builtins.rs  compile_log.rs  diagnostic.rs  display.rs  interner.rs  lib.rs
plankc/frontend/values/: Cargo.toml
plankc/frontend/values/src/: builtins.rs  lib.rs  primitive_types.rs  type_interner.rs  value_interner.rs
plankc/plank-diff-tests/: foundry.toml
plankc/plank-diff-tests/snapshots/: bit.json  plank-release.json  solady.json
plankc/plank-diff-tests/src/examples/: ERC20.sol  erc20.plk  minimal_proxy.plk  table_lookup.plk
plankc/plank-diff-tests/src/raw_evm_ops/: address_this.plk  balance.plk  basefee.plk  blobhash.plk  blockhash.plk  caller.plk  callvalue.plk  chainid.plk  coinbase.plk  difficulty.plk  gasprice.plk  number.plk  origin.plk  selfbalance.plk  sload.plk  timestamp.plk
plankc/plank-diff-tests/src/std/: Bit.sol  abi_buf_fits_test.plk  abi_dynamic.plk  abi_encode_pair.plk  abi_nested_struct.plk  abi_stress_test.plk  addr_test.plk  bit_test.plk  fixedbytes_test.plk  precompile_test.plk  regions_test.plk  storage_bytes_test.plk  version_test.plk
plankc/plank-diff-tests/test/: BaseTest.sol  RawEvmOps.t.sol
plankc/plank-diff-tests/test/benchmark/: Bit.b.sol  ERC20.b.sol
plankc/plank-diff-tests/test/examples/: ERC20.t.sol  TableLookup.t.sol
plankc/plank-diff-tests/test/std/: AbiNestedStruct.t.sol  AbiStress.t.sol  Addr.t.sol  Bit.t.sol  EvmVersionBuiltin.t.sol  FixedBytes.t.sol  PrecompileTest.t.sol  Regions.t.sol
plankc/sir/crates/assembler/src/: lib.rs  op.rs
plankc/sir/crates/cli/: Cargo.toml
plankc/sir/crates/cli/src/: main.rs
plankc/sir/crates/data/: Cargo.toml
plankc/sir/crates/data/src/: builder.rs  index.rs  lib.rs  view.rs
plankc/sir/crates/debug-backend/src/: lib.rs  operations.rs
plankc/sir/crates/parser/: Cargo.toml
plankc/sir/crates/parser/src/: emit.rs  lib.rs
plankc/sir/crates/passes-tests/: Cargo.toml  README.md
plankc/sir/crates/passes-tests/src/: function_effects.rs  lib.rs
plankc/sir/crates/passes/src/: lib.rs
plankc/sir/crates/release-backend/: Cargo.toml
plankc/sir/crates/release-backend/src/: code_layout_map.rs  code_to_asm.rs  lib.rs  (+2 more)
plankc/sir/crates/stack-scheduling/: Cargo.toml
plankc/sir/crates/static-memory-allocator/: Cargo.toml
plankc/sir/docs/: ir_text_format.md
plankc/sir/sir-solidity-diff-tests/: foundry.toml
plankc/sir/sir-solidity-diff-tests/src/: ERC20.sol  allocator_layout.sir  critical_edge.sir  data_init_runtime_layout.sir  erc20.sir  external_calls_and_returndata.sir  liveness_repro.sir  memory_widths.sir  stack_spill.sir
plankc/sir/sir-solidity-diff-tests/test/: AllocatorLayout.t.sol  BaseTest.sol  CriticalEdge.t.sol  DataInitRuntimeLayout.t.sol  Defragment.t.sol  ERC20.t.sol  ExternalCallsAndReturndata.t.sol  LivenessCrashRepro.t.sol  MemoryWidths.t.sol  StackSpill.t.sol
(+75 files in other folders)
