[package]
name = "plank-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
plank-core.workspace = true
plank-session.workspace = true
allocator-api2.workspace = true
logos = "0.16.0"

[dev-dependencies]
pretty_assertions.workspace = true
plank-test-utils.workspace = true
enum-iterator.workspace = true
