[package]
name = "sir-release-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sir-assembler.workspace = true
plank-core.workspace = true
sir-data.workspace = true
sir-stack-scheduling.workspace = true
sir-passes.workspace = true
sir-static-memory-allocator.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
alloy-primitives.workspace = true

[lints]
workspace = true
