[package]
name = "sir-stack-scheduling"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sir-data.workspace = true
sir-passes.workspace = true
plank-core.workspace = true
hashbrown.workspace = true

[dev-dependencies]
plank-test-utils.workspace = true
pretty_assertions.workspace = true
sir-parser.workspace = true

[lints]
workspace = true
